Add send response to document

--- a/resources/lang/es/es.json
+++ b/resources/lang/es/es.json
@@ -710,5 +710,5 @@
     "Zimbabwe": "Zimbabwe",
     "Zip / Postal Code": "Zip / Código postal",
     "Åland Islands": "Islas Åland",
-    "test dev": "prueba"
+    "subject": "asunto"
 }
