alter role users

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -713,5 +713,6 @@
     "subject": "Asunto",
     "admin": "Administrador",
     "personal": "Personal",
-    "user": "Usuario"
+    "user": "Usuario",
+    "citizen": "Ciudadano"
 }
